# cChatServer

./: .gitignore  CMakeLists.txt  LICENSE  cChatServer  cChatServer.c  cChatServerConfig.h  cChatServerConfig.h.in
config/: server.json
inc/Config/: config.h
inc/Socket/: socket.h
src/: CMakeLists.txt
src/Config/: CMakeLists.txt  config.c
src/Socket/: CMakeLists.txt  socket.c
